force-app/main/default/objects/Tax_Provider__mdt/fields/Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line2__c</fullName>
    <label>Address Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>