force-app/main/default/objects/Tax_Provider__mdt/fields/Commit__c.field-meta.xml
<CustomField>
    <fullName>Commit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commit?</label>
    <type>Checkbox</type>
</CustomField>