force-app/main/default/objects/Tax_Provider__mdt/fields/Consider_product_tax_codes__c.field-meta.xml
<CustomField>
    <fullName>Consider_product_tax_codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider product tax codes?</label>
    <type>Checkbox</type>
</CustomField>