force-app/main/default/objects/Tax_Provider__mdt/fields/Context_Locale__c.field-meta.xml
<CustomField>
    <fullName>Context_Locale__c</fullName>
    <label>Context Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>