force-app/main/default/objects/Tax_Provider__mdt/fields/Context_Name__c.field-meta.xml
<CustomField>
    <fullName>Context_Name__c</fullName>
    <label>Context Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>