force-app/main/default/objects/Tax_Provider__mdt/fields/Customer_Tax_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tax_Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Tax Exemption?</label>
    <type>Checkbox</type>
</CustomField>