force-app/main/default/objects/Tax_Provider__mdt/fields/Default_Product_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Product_Tax_Code__c</fullName>
    <label>Default Product Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>