force-app/main/default/objects/Tax_Provider__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SalesOrder</fullName>
                <default>true</default>
                <label>SalesOrder</label>
            </value>
            <value>
                <fullName>SalesInvoice</fullName>
            </value>
            <value>
                <fullName>PurchaseOrder</fullName>
            </value>
            <value>
                <fullName>PurchaseInvoice</fullName>
            </value>
            <value>
                <fullName>Avalara - ReturnOrder</fullName>
            </value>
            <value>
                <fullName>Avalara - ReturnInvoice</fullName>
            </value>
            <value>
                <fullName>InventoryTransferOrder</fullName>
            </value>
            <value>
                <fullName>InventoryTransferInvoice</fullName>
            </value>
            <value>
                <fullName>QUOTATION</fullName>
            </value>
            <value>
                <fullName>INVOICE</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTE_TAX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>