force-app/main/default/objects/Tax_Provider__mdt/fields/Product_Tax_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Product_Tax_Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Tax Exemption?</label>
    <type>Checkbox</type>
</CustomField>