force-app/main/default/objects/Tax_Provider__mdt/fields/Request_Template__c.field-meta.xml
<CustomField>
    <fullName>Request_Template__c</fullName>
    <label>Request Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>