force-app/main/default/objects/Tax_Provider__mdt/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>HTTP_Service__mdt</referenceTo>
    <relationshipLabel>Tax Providers</relationshipLabel>
    <relationshipName>Tax_Providers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>