force-app/main/default/objects/Tax_Provider__mdt/fields/Taxation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Taxation_Policy__c</fullName>
    <label>Taxation Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net</fullName>
                <default>true</default>
                <label>Net</label>
            </value>
            <value>
                <fullName>Gross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>