force-app/main/default/objects/Tax_Provider__mdt/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CreateTransaction</fullName>
                <default>true</default>
                <label>CreateTransaction</label>
            </value>
            <value>
                <fullName>AdjustTransaction</fullName>
            </value>
            <value>
                <fullName>CommitTransaction</fullName>
            </value>
            <value>
                <fullName>RefundTransaction</fullName>
            </value>
            <value>
                <fullName>SALE</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>